--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Chau Tran</title>
+  <title>Thuoc Nguyen</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Personal blog by Chau Tran" />
+  <meta name="description" content="Personal blog by Thuoc Nguyen" />
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.png" />
   <link
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap"
